<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/display_text_view"
        android:text="0"
        android:layout_span="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:gravity="right"/>
    <!--<TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <TextView
            android:text="0"
            android:layout_span="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3" />

    </TableRow>-->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <Button
            android:id="@+id/button_del"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_del"
            android:layout_column="0"/>

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/button_7"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_7"
            android:layout_column="0"/>

        <Button
            android:id="@+id/button_8"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_8"
            android:layout_column="1"/>

        <Button
            android:id="@+id/button_9"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/button_9" />

        <Button
            android:id="@+id/button_multiply"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_times"
            android:layout_column="3"/>
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/button_4"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_4"
            android:layout_column="0"/>

        <Button
            android:id="@+id/button_5"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_5"
            android:layout_column="1"/>
        <Button
            android:id="@+id/button_6"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_6"
            android:layout_column="2"/>
        <Button
            android:id="@+id/button_minus"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_minus"
            android:layout_column="3"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <Button
            android:id="@+id/button_1"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_1"
            android:layout_column="0"/>

        <Button
            android:id="@+id/button_2"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_2"
            android:layout_column="1"/>
        <Button
            android:id="@+id/button_3"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_3"
            android:layout_column="2"/>
        <Button
            android:id="@+id/button_plus"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_plus"
            android:layout_column="3"/>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/button_0"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_0"
            android:layout_column="0"/>

        <Button
            android:id="@+id/button_dot"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_decimal"
            android:layout_column="1"/>
        <Button
            android:id="@+id/button_divide"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_divide"
            android:layout_column="2"/>
        <Button
            android:id="@+id/button_equal"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_equal"
            android:layout_column="3"/>
    </TableRow>

</TableLayout>